// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Manager who has reportees & metrics 1`] = `
<div
  className="Reportees-root-1"
>
  <table
    className="MuiTable-root-2"
  >
    <thead
      className="MuiTableHead-root-3"
    >
      <tr
        className="MuiTableRow-root-4 MuiTableRow-head-7"
      >
        <th
          aria-sort={null}
          className="MuiTableCell-root-9 MuiTableCell-head-10"
          scope="col"
        />
        <th
          aria-sort={null}
          className="MuiTableCell-root-9 MuiTableCell-head-10 MuiTableCell-alignRight-19"
          scope="col"
        >
          Assigned
        </th>
        <th
          aria-sort={null}
          className="MuiTableCell-root-9 MuiTableCell-head-10 MuiTableCell-alignRight-19"
          scope="col"
        >
          Needinfo
        </th>
      </tr>
    </thead>
    <tbody
      className="MuiTableBody-root-21"
    >
      <tr
        className="MuiTableRow-root-4"
      >
        <td
          aria-sort={null}
          className="MuiTableCell-root-9 MuiTableCell-body-11"
        >
          Manager 
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root-9 MuiTableCell-body-11 MuiTableCell-alignRight-19"
        >
          <a
            href="https://mozilla.org/0"
            rel="noopener noreferrer"
            target="_blank"
          >
            0
          </a>
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root-9 MuiTableCell-body-11 MuiTableCell-alignRight-19"
        >
          <a
            href="https://mozilla.org/1"
            rel="noopener noreferrer"
            target="_blank"
          >
            1
          </a>
        </td>
      </tr>
      <tr
        className="MuiTableRow-root-4"
      >
        <td
          aria-sort={null}
          className="MuiTableCell-root-9 MuiTableCell-body-11"
        >
          Someone 
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root-9 MuiTableCell-body-11 MuiTableCell-alignRight-19"
        >
          <a
            href="https://mozilla.org/0"
            rel="noopener noreferrer"
            target="_blank"
          >
            0
          </a>
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root-9 MuiTableCell-body-11 MuiTableCell-alignRight-19"
        >
          <a
            href="https://mozilla.org/1"
            rel="noopener noreferrer"
            target="_blank"
          >
            1
          </a>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`renders Manager who has reportees 1`] = `
<div
  className="Reportees-root-1"
>
  <table
    className="MuiTable-root-2"
  >
    <thead
      className="MuiTableHead-root-3"
    >
      <tr
        className="MuiTableRow-root-4 MuiTableRow-head-7"
      >
        <th
          aria-sort={null}
          className="MuiTableCell-root-9 MuiTableCell-head-10"
          scope="col"
        />
        <th
          aria-sort={null}
          className="MuiTableCell-root-9 MuiTableCell-head-10 MuiTableCell-alignRight-19"
          scope="col"
        >
          Assigned
        </th>
        <th
          aria-sort={null}
          className="MuiTableCell-root-9 MuiTableCell-head-10 MuiTableCell-alignRight-19"
          scope="col"
        >
          Needinfo
        </th>
      </tr>
    </thead>
    <tbody
      className="MuiTableBody-root-21"
    >
      <tr
        className="MuiTableRow-root-4"
      >
        <td
          aria-sort={null}
          className="MuiTableCell-root-9 MuiTableCell-body-11"
        >
          Manager 
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root-9 MuiTableCell-body-11 MuiTableCell-alignRight-19"
        />
        <td
          aria-sort={null}
          className="MuiTableCell-root-9 MuiTableCell-body-11 MuiTableCell-alignRight-19"
        />
      </tr>
      <tr
        className="MuiTableRow-root-4"
      >
        <td
          aria-sort={null}
          className="MuiTableCell-root-9 MuiTableCell-body-11"
        >
          Someone 
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root-9 MuiTableCell-body-11 MuiTableCell-alignRight-19"
        />
        <td
          aria-sort={null}
          className="MuiTableCell-root-9 MuiTableCell-body-11 MuiTableCell-alignRight-19"
        />
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`renders Someone with no reportees 1`] = `
<div
  className="Reportees-root-1"
>
  <table
    className="MuiTable-root-2"
  >
    <thead
      className="MuiTableHead-root-3"
    >
      <tr
        className="MuiTableRow-root-4 MuiTableRow-head-7"
      >
        <th
          aria-sort={null}
          className="MuiTableCell-root-9 MuiTableCell-head-10"
          scope="col"
        />
        <th
          aria-sort={null}
          className="MuiTableCell-root-9 MuiTableCell-head-10 MuiTableCell-alignRight-19"
          scope="col"
        >
          Assigned
        </th>
        <th
          aria-sort={null}
          className="MuiTableCell-root-9 MuiTableCell-head-10 MuiTableCell-alignRight-19"
          scope="col"
        >
          Needinfo
        </th>
      </tr>
    </thead>
    <tbody
      className="MuiTableBody-root-21"
    >
      <tr
        className="MuiTableRow-root-4"
      >
        <td
          aria-sort={null}
          className="MuiTableCell-root-9 MuiTableCell-body-11"
        >
          Manager 
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root-9 MuiTableCell-body-11 MuiTableCell-alignRight-19"
        />
        <td
          aria-sort={null}
          className="MuiTableCell-root-9 MuiTableCell-body-11 MuiTableCell-alignRight-19"
        />
      </tr>
      <tr
        className="MuiTableRow-root-4"
      >
        <td
          aria-sort={null}
          className="MuiTableCell-root-9 MuiTableCell-body-11"
        >
          Someone 
        </td>
        <td
          aria-sort={null}
          className="MuiTableCell-root-9 MuiTableCell-body-11 MuiTableCell-alignRight-19"
        />
        <td
          aria-sort={null}
          className="MuiTableCell-root-9 MuiTableCell-body-11 MuiTableCell-alignRight-19"
        />
      </tr>
    </tbody>
  </table>
</div>
`;
